--- a/secondproject/WebContent/index.html
+++ b/secondproject/WebContent/index.html
@@ -7,6 +7,9 @@
 <html>
 <head>
 <title>asdf</title>
+ <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+
+
 <meta charset="utf-8" />
 <meta name="viewport"
    content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -16,8 +19,10 @@
 
    <!-- Header -->
    <header id="header">
-      <h1>성격을 통한 나의 여행지 찾기</h1>
-      <p>성격 유형을 통해</p>
+      <h1>성향에 맞는 나의 여행지 찾기</h1>
+      <p>우리가 여행을 떠나는 이유와 만족을 느끼는 여행의 양상은 
+ 내가 어떤 사람인가에 따라 달라진다.<br> 우리가 자신에 대해 깊이 생각할 기회를 
+ 얻는다면 누구나 행복한 여행을 꿈꾸고 구현할 수 있다. </p>
    </header>
 
    <!-- Signup Form -->
@@ -25,22 +30,23 @@
       <input type="submit" value="시작하기" id="pro" />
    </form>
 
-   <script src="assets/js/jquery-3.4.1.min.js"></script>
+  
    <script type="text/javascript">
       $('#pro').on('click', timeCheck);
 
       function timeCheck() {
          setTimeout(function() {
             location.href = 'survey.jsp';
-         }, 3000);
+         },1000);
       }
+      
    </script>
 
    <!-- Footer -->
    <footer id="footer"> </footer>
 
    <!-- Scripts -->
-   <script src="assets/js/main.js?ver4"></script>
+   <script src="assets/js/main.js?ver1"></script>
 
 </body>
 </html>
