--- a/secondproject/WebContent/index.html
+++ b/secondproject/WebContent/index.html
@@ -22,7 +22,7 @@
       <h1>성향에 맞는 나의 여행지 찾기</h1>
       <p>우리가 여행을 떠나는 이유와 만족을 느끼는 여행의 양상은 
  내가 어떤 사람인가에 따라 달라진다.<br> 우리가 자신에 대해 깊이 생각할 기회를 
- 얻는다면 누구나 행복한 여행을 꿈꾸고 구현할 수 있다. </p>
+ 얻는다면 누구나 행복한 여행을 꿈꾸고 구현할 수 있다.ddddd </p>
    </header>
 
    <!-- Signup Form -->
