--- a/secondproject/WebContent/generic3.html
+++ b/secondproject/WebContent/generic3.html
@@ -32,10 +32,10 @@
             <!-- Main -->
                <section id="main" class="wrapper">
                   <div class="inner">
-                     <h1 class="major">자유의 여신상</h1>
-                     <span class="image fit"><img src="images2/pic04.jpg" alt="" /></span>
-                     <p> 방화 가능</p>
-                     <p> 책 많이 읽음</p>
+                     <h1 class="major">그랜드캐니언</h1>
+                     <span class="image fit"><img src="images2/pic05.jpg" alt="" /></span>
+                     <p> 돌많음</p>
+                     <p> 광활함</p>
                   </div>
                </section>
 
