--- a/secondproject/WebContent/main2.html
+++ b/secondproject/WebContent/main2.html
@@ -27,8 +27,10 @@ margin:5% 0 30%;
       <div class="inner">
          <nav>
             <ul>
-               <li><a href="#intro">Welcome</a></li>
+              <!--  <li><a href="#intro">Welcome</a></li> -->
                <li><a href="#one">당신의 여행지</a></li>
+               <li><a href="#two">나라별여행지</a></li>
+               
                <!-- <li><a href="#two">What we do</a></li> -->
                <li><a href="#three">게시글</a></li>
             </ul>
@@ -40,7 +42,7 @@ margin:5% 0 30%;
    <div id="wrapper">
 
       <!-- Intro -->
-      <section id="intro" class="wrapper style1 fullscreen fade-up">
+   <!--    <section id="intro" class="wrapper style1 fullscreen fade-up">
          <div class="inner">
             <h1 class = "toptop">당신의 성향은 ? 이고 당신의 여행지는 ?</h1>
          
@@ -49,7 +51,7 @@ margin:5% 0 30%;
                <li><a href="#one" class="button scrolly">Learn more</a></li>
             </ul>
          </div>
-      </section>
+      </section> -->
 
       <!-- One -->
       <section id="one" class="wrapper style2 spotlights">
