--- a/secondproject/WebContent/welcome.html
+++ b/secondproject/WebContent/welcome.html
@@ -40,9 +40,9 @@ margin:5% 0 30%;
       <!-- Intro -->
       <section id="intro" class="wrapper style1 fullscreen fade-up">
          <div class="inner">
-            <h1 class = "toptop">당신의 성향은 ? 이고 당신의 여행지는 ?</h1>
+            <h1 class = "toptop">외향성의 특징이 강한 당신에게 추천하는 여행지는 미국입니다.</h1>
          
-            <p margin= "10%"> 개방성 외향성</p>
+            <p margin= "10%"> 미국사진</p>
             <ul class="actions">
                <li><a href="main2.html" class="button scrolly">Learn more</a></li>
             </ul>
