--- a/secondproject/WebContent/main3.html
+++ b/secondproject/WebContent/main3.html
@@ -55,7 +55,7 @@ span {
 			<nav>
 				<ul>
 					<!--  <li><a href="#intro">Welcome</a></li> -->
-					<li><a href="#one">외향 +개방 인당신의 여행지</a></li>
+					<li><a href="#one">외향 +개방X인당신의 여행지</a></li>
 					<li><a href="#two">나라별여행지</a></li>
 
 					<!-- <li><a href="#two">What we do</a></li> -->
@@ -83,12 +83,12 @@ span {
 		<!-- One -->
 		<section id="one" class="wrapper style2 spotlights">
 			<section>
-				<a href="#" class="image"><img src="images2/pic01.jpg" alt=""
+				<a href="#" class="image"><img src="images2/2.2.2.jfif" alt=""
 					data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
-						<h2>호주 전통문화 공연</h2>
-						<p>호주 부족</p>
+						<h2>베리어리프</h2>
+						<p>스노쿨링</p>
 						<ul class="actions">
 							<li><a href="generic2.html" class="button">Learn more</a></li>
 						</ul>
@@ -96,12 +96,12 @@ span {
 				</div>
 			</section>
 			<section>
-				<a href="#" class="image"><img src="images2/wave.jfif" alt=""
+				<a href="#" class="image"><img src="images2/2.2.3.png" alt=""
 					data-position="top center" /></a>
 				<div class="content">
 					<div class="inner">
-						<h2>퍼스</h2>
-						<p>웨이브락</p>
+						<h2>배런강</h2>
+						<p>래프팅</p>
 						<ul class="actions">
 							<li><a href="generic3.html" class="button">Learn more</a></li>
 						</ul>
@@ -109,12 +109,12 @@ span {
 				</div>
 			</section>
 			<section>
-				<a href="#" class="image"><img src="images2/middle.jfif" alt=""
+				<a href="#" class="image"><img src="images2/2.2.4.jfif" alt=""
 					data-position="25% 25%" /></a>
 				<div class="content">
 					<div class="inner">
-						<h2>핑크호수</h2>
-						<p>미들락</p>
+						<h2>골드코스트</h2>
+						<p>서핑</p>
 						<ul class="actions">
 							<li><a href="generic4.html" class="button">Learn more</a></li>
 						</ul>
