--- a/secondproject/WebContent/generic2.html
+++ b/secondproject/WebContent/generic2.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML>
 <!--
    Hyperspace by HTML5 UP
@@ -33,7 +34,7 @@
                <section id="main" class="wrapper">
                   <div class="inner">
                      <h1 class="major">자유의 여신상</h1>
-                     <span class="image fit"><img src="images2/pic04.jpg" alt="" /></span>
+                     <span class="image fit"><img src="images2/pic05.jfif" alt="" /></span>
                      <p> 방화 가능</p>
                      <p> 책 많이 읽음</p>
                   </div>
