--- a/secondproject/WebContent/generic2.html
+++ b/secondproject/WebContent/generic2.html
@@ -34,8 +34,8 @@
                <section id="main" class="wrapper">
                   <div class="inner">
                      <h1 class="major">자유의 여신상</h1>
-                     <span class="image fit"><img src="images2/pic05.jfif" alt="" /></span>
-                     <p> 방화 가능</p>
+                     <span class="image fit"><img src="images2/pic01.jpg" alt="" /></span>
+                     <p>호주 부족</p>
                      <p> 책 많이 읽음</p>
                   </div>
                </section>
