--- a/secondproject/WebContent/generic3.html
+++ b/secondproject/WebContent/generic3.html
@@ -32,9 +32,9 @@
             <!-- Main -->
                <section id="main" class="wrapper">
                   <div class="inner">
-                     <h1 class="major">그랜드캐니언</h1>
-                     <span class="image fit"><img src="images2/pic05.jpg" alt="" /></span>
-                     <p> 돌많음</p>
+                     <h1 class="major">퍼스</h1>
+                     <span class="image fit"><img src="images2/wave.jfif" alt="" /></span>
+                     <p> 웨이브락</p>
                      <p> 광활함</p>
                   </div>
                </section>
