--- a/secondproject/WebContent/generic4.html
+++ b/secondproject/WebContent/generic4.html
@@ -32,9 +32,9 @@
             <!-- Main -->
                <section id="main" class="wrapper">
                   <div class="inner">
-                     <h1 class="major">백안관</h1>
-                     <span class="image fit"><img src="images2/pic06.jpg" alt="" /></span>
-                     <p> 하얀집</p>
+                     <h1 class="major">핑크호수</h1>
+                     <span class="image fit"><img src="images2/middle.jfif" alt="" /></span>
+                     <p>미들락</p>
                      <p> 대통령</p>
                   </div>
                </section>
