--- a/secondproject/WebContent/main2.html
+++ b/secondproject/WebContent/main2.html
@@ -123,11 +123,17 @@ span {
 			</section>
 		</section>
 
+
 		<!-- Two -->
-		<!-- <section id="two" class="wrapper style3 fade-up">
-         <div class="inner">
-            <h2>What we do</h2>
-            <p>Phasellus convallis elit id ullamcorper pulvinar. Duis
+		<section id="two" class="wrapper style3 fade-up">
+			<div class="inner">
+				<h3>마커를 클릭해 성향에 맞는 전세계 여행지 구경하기</h3>
+				<script type="text/javascript" src="mapdata.js"></script>
+				<script type="text/javascript" src="worldmap.js"></script>
+				<div id="map"></div>
+			</div>
+		</section>
+		<!-- <p>Phasellus convallis elit id ullamcorper pulvinar. Duis
                aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam
                dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit
                amet imperdiet est velit quis lorem.</p>
@@ -172,8 +178,8 @@ span {
             <ul class="actions">
                <li><a href="generic2.html" class="button">Learn more</a></li>
             </ul>
-         </div>
-      </section> -->
+         </div>-->
+
 
 		<!-- Three -->
 		<section id="three" class="wrapper style1 fade-up">
