--- a/secondproject/WebContent/generic2.html
+++ b/secondproject/WebContent/generic2.html
@@ -6,59 +6,69 @@
    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-   <head>
-      <title>Generic - Hyperspace by HTML5 UP</title>
-      <meta charset="utf-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-      <link rel="stylesheet" href="assets2/css/main2.css" />
-      <noscript><link rel="stylesheet" href="assets2/css/noscript2.css" /></noscript>
-   </head>
-   <body class="is-preload">
+<head>
+<title>Generic - Hyperspace by HTML5 UP</title>
+<meta charset="utf-8" />
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, user-scalable=no" />
+<link rel="stylesheet" href="assets2/css/main2.css" />
+<noscript>
+	<link rel="stylesheet" href="assets2/css/noscript2.css" />
+</noscript>
+</head>
+<body class="is-preload">
 
-      <!-- Header -->
-         <header id="header">
-            <a href="main2.html" class="title">Hyperspace</a>
-            <nav>
-               <ul>
-                  <li><a href="main2.html">Home</a></li>
-                  <li><a href="generic2.html" class="active">Generic</a></li>
-                  <li><a href="elements2.html">Elements</a></li>
-               </ul>
-            </nav>
-         </header>
+	<!-- Header -->
+	<header id="header">
+		<a href="main2.html" class="title">BIG PI</a>
+		<nav>
+			<ul>
+				<li><a href="main2.html">Home</a></li>
+				<li><a href="generic2.html" class="active">Generic</a></li>
+				<li><a href="elements2.html">Elements</a></li>
+			</ul>
+		</nav>
+	</header>
 
-      <!-- Wrapper -->
-         <div id="wrapper">
+	<!-- Wrapper -->
+	<div id="wrapper">
 
-            <!-- Main -->
-               <section id="main" class="wrapper">
-                  <div class="inner">
-                     <h1 class="major">자유의 여신상</h1>
-                     <span class="image fit"><img src="images2/pic01.jpg" alt="" /></span>
-                     <p>호주 부족</p>
-                     <p> 책 많이 읽음</p>
-                  </div>
-               </section>
+		<!-- Main -->
+		<section id="main" class="wrapper">
+			<div class="inner">
+				<h1 class="major">골드코스트 서핑</h1>
+				<span class="image fit"><img src="austrailia/image/aust_surf.jpg" alt="" /></span>
+				<p>호주에서는 세계에서 가장 훌륭한 서핑 장소 중 하나로 골드 코스트의 눈부신 해안을 감상할 수 있다. 
+				골드코스트는 호주 퀸즐랜드 주 남동부의 도시로 인구는 약 59만명이다. 오스트레일리아에서 인구 증가율이 가장
+				높은 도시로 남북으로 60km 뻗어있으며 퀸즐랜드 주의 주도인 브리즈번에서 남쪽으로 약 78km에 위치한다.
+				내륙 바다는 세계자연유산에 등재된 스프링 브룩 국립공원이 있다. 골드코스트에는 호주에서 아주 인기있는
+				서핑 포인트인 브로드 비치, 노비 비치, 공주 비치 등이 있다. 
+				어린이부터
+					성인까지 온 가족이 함께 하기 적절하며 파도와 함께 서핑할 수 있다. 
+					또한, 초보자는 전문 강사에게 2시간의 강습을 받을 수 있다.</p>
+			</div>
+		</section>
 
-         </div>
+	</div>
 
-      <!-- Footer -->
-         <footer id="footer" class="wrapper alt">
-            <div class="inner">
-               <ul class="menu">
-                  <li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-               </ul>
-            </div>
-         </footer>
+	<!-- Footer -->
+	<footer id="footer" class="wrapper alt">
+		<div class="inner">
+			<ul class="menu">
+				<li>&copy; Untitled. All rights reserved.</li>
+				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+			</ul>
+		</div>
+	</footer>
 
-      <!-- Scripts -->
-         <script src="assets2/js/jquery.min2.js?ver1"></script>
-         <script src="assets2/js/jquery.scrollex.min2.js?ver1"></script>
-         <script src="assets2/js/jquery.scrolly.min2.js?ver1"></script>
-         <script src="assets2/js/browser.min2.js?ver1"></script>
-         <script src="assets2/js/breakpoints.min2.js?ver1"></script>
-         <script src="assets2/js/util2.js?ver1"></script>
-         <script src="assets2/js/main2.js?ver1"></script>
+	<!-- Scripts -->
+	<script src="assets2/js/jquery.min2.js?ver1"></script>
+	<script src="assets2/js/jquery.scrollex.min2.js?ver1"></script>
+	<script src="assets2/js/jquery.scrolly.min2.js?ver1"></script>
+	<script src="assets2/js/browser.min2.js?ver1"></script>
+	<script src="assets2/js/breakpoints.min2.js?ver1"></script>
+	<script src="assets2/js/util2.js?ver1"></script>
+	<script src="assets2/js/main2.js?ver1"></script>
 
-   </body>
+</body>
 </html>
