--- a/secondproject/WebContent/generic4.html
+++ b/secondproject/WebContent/generic4.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML>
 <!--
    Hyperspace by HTML5 UP
@@ -5,59 +6,67 @@
    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-   <head>
-      <title>Generic - Hyperspace by HTML5 UP</title>
-      <meta charset="utf-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-      <link rel="stylesheet" href="assets2/css/main2.css" />
-      <noscript><link rel="stylesheet" href="assets2/css/noscript2.css" /></noscript>
-   </head>
-   <body class="is-preload">
+<head>
+<title>Generic - Hyperspace by HTML5 UP</title>
+<meta charset="utf-8" />
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, user-scalable=no" />
+<link rel="stylesheet" href="assets2/css/main2.css" />
+<noscript>
+	<link rel="stylesheet" href="assets2/css/noscript2.css" />
+</noscript>
+</head>
+<body class="is-preload">
 
-      <!-- Header -->
-         <header id="header">
-            <a href="main2.html" class="title">Hyperspace</a>
-            <nav>
-               <ul>
-                  <li><a href="main2.html">Home</a></li>
-                  <li><a href="generic2.html" class="active">Generic</a></li>
-                  <li><a href="elements2.html">Elements</a></li>
-               </ul>
-            </nav>
-         </header>
+	<!-- Header -->
+	<header id="header">
+		<a href="main2.html" class="title">BIG PI</a>
+		<nav>
+			<ul>
+				<li><a href="main2.html">Home</a></li>
+				<li><a href="generic2.html" class="active">Generic</a></li>
+				<li><a href="elements2.html">Elements</a></li>
+			</ul>
+		</nav>
+	</header>
 
-      <!-- Wrapper -->
-         <div id="wrapper">
+	<!-- Wrapper -->
+	<div id="wrapper">
 
-            <!-- Main -->
-               <section id="main" class="wrapper">
-                  <div class="inner">
-                     <h1 class="major">핑크호수</h1>
-                     <span class="image fit"><img src="images2/middle.jfif" alt="" /></span>
-                     <p>미들락</p>
-                     <p> 대통령</p>
-                  </div>
-               </section>
+		<!-- Main -->
+		<section id="main" class="wrapper">
+			<div class="inner">
+				<h1 class="major">배런강 래프팅</h1>
+				<span class="image fit"><img src="austrailia/image/aust_rafting.jpg" alt="" /></span>
+				<p>배런강은 호주 아더톤 테이블랜드 지역의 강으로 퀸즐랜드 북쪽 지방에 위치한다. 
+				티나루 호수에서 발원하는 바론 강은 165km 길이이며 전체 수역은 2300km에 달한다. 현재의 이름은
+				1875년 경찰 행정관이던 존 스톤과 더글라스라는 사람이 이곳을 돌아보던 중에 그들의 상관이었던 티에이치 바론의 이름을 따서 지었다.
+				배런강은 케언즈에서 가장 가까운 거리에 위치하고 있다. 
+				사류댐에서 방출하는 강물과 약 30여개 이상의 급류가 있어 
+				호주에서 가장 짜릿한 투어로 꼽히는 배런강 래프팅은 세계 3대 래프팅 장소 중 하나이기도 하다. </p>
+			</div>
+		</section>
 
-         </div>
+	</div>
 
-      <!-- Footer -->
-         <footer id="footer" class="wrapper alt">
-            <div class="inner">
-               <ul class="menu">
-                  <li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-               </ul>
-            </div>
-         </footer>
+	<!-- Footer -->
+	<footer id="footer" class="wrapper alt">
+		<div class="inner">
+			<ul class="menu">
+				<li>&copy; Untitled. All rights reserved.</li>
+				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+			</ul>
+		</div>
+	</footer>
 
-      <!-- Scripts -->
-         <script src="assets2/js/jquery.min2.js?ver1"></script>
-         <script src="assets2/js/jquery.scrollex.min2.js?ver1"></script>
-         <script src="assets2/js/jquery.scrolly.min2.js?ver1"></script>
-         <script src="assets2/js/browser.min2.js?ver1"></script>
-         <script src="assets2/js/breakpoints.min2.js?ver1"></script>
-         <script src="assets2/js/util2.js?ver1"></script>
-         <script src="assets2/js/main2.js?ver1"></script>
+	<!-- Scripts -->
+	<script src="assets2/js/jquery.min2.js?ver1"></script>
+	<script src="assets2/js/jquery.scrollex.min2.js?ver1"></script>
+	<script src="assets2/js/jquery.scrolly.min2.js?ver1"></script>
+	<script src="assets2/js/browser.min2.js?ver1"></script>
+	<script src="assets2/js/breakpoints.min2.js?ver1"></script>
+	<script src="assets2/js/util2.js?ver1"></script>
+	<script src="assets2/js/main2.js?ver1"></script>
 
-   </body>
+</body>
 </html>
