--- a/secondproject/WebContent/generic3.html
+++ b/secondproject/WebContent/generic3.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML>
 <!--
    Hyperspace by HTML5 UP
@@ -5,59 +6,68 @@
    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-   <head>
-      <title>Generic - Hyperspace by HTML5 UP</title>
-      <meta charset="utf-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-      <link rel="stylesheet" href="assets2/css/main2.css" />
-      <noscript><link rel="stylesheet" href="assets2/css/noscript2.css" /></noscript>
-   </head>
-   <body class="is-preload">
+<head>
+<title>Generic - Hyperspace by HTML5 UP</title>
+<meta charset="utf-8" />
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, user-scalable=no" />
+<link rel="stylesheet" href="assets2/css/main2.css" />
+<noscript>
+	<link rel="stylesheet" href="assets2/css/noscript2.css" />
+</noscript>
+</head>
+<body class="is-preload">
 
-      <!-- Header -->
-         <header id="header">
-            <a href="main2.html" class="title">Hyperspace</a>
-            <nav>
-               <ul>
-                  <li><a href="main2.html">Home</a></li>
-                  <li><a href="generic2.html" class="active">Generic</a></li>
-                  <li><a href="elements2.html">Elements</a></li>
-               </ul>
-            </nav>
-         </header>
+	<!-- Header -->
+	<header id="header">
+		<a href="main2.html" class="title">BIG PI</a>
+		<nav>
+			<ul>
+				<li><a href="main2.html">Home</a></li>
+				<li><a href="generic2.html" class="active">Generic</a></li>
+				<li><a href="elements2.html">Elements</a></li>
+			</ul>
+		</nav>
+	</header>
 
-      <!-- Wrapper -->
-         <div id="wrapper">
+	<!-- Wrapper -->
+	<div id="wrapper">
 
-            <!-- Main -->
-               <section id="main" class="wrapper">
-                  <div class="inner">
-                     <h1 class="major">퍼스</h1>
-                     <span class="image fit"><img src="images2/wave.jfif" alt="" /></span>
-                     <p> 웨이브락</p>
-                     <p> 광활함</p>
-                  </div>
-               </section>
+		<!-- Main -->
+		<section id="main" class="wrapper">
+			<div class="inner">
+				<h1 class="major">배리어리프 스노클링</h1>
+				<span class="image fit"><img src="austrailia/image/aust_diver.jpg" alt="" /></span>
+				<p>그레이트 배리어 리프는 호주 북동부에 위치한 세계 최대의 산호초 지대이다.
+				호주 해안 지형에서 가장 두드러진 특색을 가지고 있는데 북쪽은 파퓨아 뉴기니의 플라이 강 어귀까지 남쪽은
+				퀸즐랜드주의 레이디 엘리엇까지 이어져있다. 산호초 대부분이 바다에 잠겨 있고 일부가
+				바다 위로 나와 방파제와 같은 외관을 형성한다.
+				세계 자유유산 지정. 보트로 그레이트 배리어 리프 장소들을 방문해 스노클 장비를 제공하고 수업이 함께 진행된다. 
+				스노클링 뿐 아니라 스쿠버다이빙, 헬기투어, 물고기 먹이주기 관람 등의 다양한 상품을 즐길 수 있다. 
+				정박기지시설에서 입수하는 방식으로 남녀노소에게 모두 안전하다. </p>
+			</div>
+		</section>
 
-         </div>
+	</div>
 
-      <!-- Footer -->
-         <footer id="footer" class="wrapper alt">
-            <div class="inner">
-               <ul class="menu">
-                  <li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-               </ul>
-            </div>
-         </footer>
+	<!-- Footer -->
+	<footer id="footer" class="wrapper alt">
+		<div class="inner">
+			<ul class="menu">
+				<li>&copy; Untitled. All rights reserved.</li>
+				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+			</ul>
+		</div>
+	</footer>
 
-      <!-- Scripts -->
-         <script src="assets2/js/jquery.min2.js?ver1"></script>
-         <script src="assets2/js/jquery.scrollex.min2.js?ver1"></script>
-         <script src="assets2/js/jquery.scrolly.min2.js?ver1"></script>
-         <script src="assets2/js/browser.min2.js?ver1"></script>
-         <script src="assets2/js/breakpoints.min2.js?ver1"></script>
-         <script src="assets2/js/util2.js?ver1"></script>
-         <script src="assets2/js/main2.js?ver1"></script>
+	<!-- Scripts -->
+	<script src="assets2/js/jquery.min2.js?ver1"></script>
+	<script src="assets2/js/jquery.scrollex.min2.js?ver1"></script>
+	<script src="assets2/js/jquery.scrolly.min2.js?ver1"></script>
+	<script src="assets2/js/browser.min2.js?ver1"></script>
+	<script src="assets2/js/breakpoints.min2.js?ver1"></script>
+	<script src="assets2/js/util2.js?ver1"></script>
+	<script src="assets2/js/main2.js?ver1"></script>
 
-   </body>
+</body>
 </html>
